[package]
name = "yew-tryout"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
rand = { version = "0.8.5" }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2.81"
gloo = "0.8.0"
validator = { version=  "0.16.0", features=["derive"] }
form = { path = "form" }
form_derive = { path = "form_derive" }
serde_json = "1.0.89"
serde = "1.0.150"